# Words-Learning

./: .env  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
code/: csv_reader.py  learn.py  main.py  settings_loader.py  statistic.py  text.py  vocabulary.py  windows.py
files/: statistic.csv  words.csv
words learning/: csv_reader.py  learn.py  main.py  vocabulary.py  windows.py
words_learning/: __main__.py  config.py  json_reader.py  learn.py  main.py  settings_loader.py  statistic.py  text.py  vocabulary.py  windows.py
words_learning/console/: input.py  output.py
words_learning/page/: __init__.py  add_page.py  change_page.py  delete_page.py  learn_page.py  start_page.py  statistic_page.py
words_learning/utils/: __init__.py  language_change.py  time.py
words_learning/vocabulary/: __init__.py  dictionary.py  dictionary_unit.py  statistic.py
words_learning/windows/: add.py  add_txt.py  delete.py  language_choice.py  learn.py  list.py
