[tool.poetry]
name = "Words Learning"
version = "0.3.5"
description = "Program that can help you learn words."
authors = ["I ZomBie <patrik009009@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9 <3.13"
termcolor = "^2.4.0"
matplotlib = "^3.8.4"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"