[tool.poetry]
name = "Words Learning"
version = "1.0.0"
description = "Program that can help you learn words."
authors = ["I ZomBie <patrik009009@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9 <3.14"
termcolor = "^2.4.0"
matplotlib = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"